Re-added z-index to send button, fixes it being missing

--- a/code/UI/Base/Chatbox/PlatformerChatBox.scss
+++ b/code/UI/Base/Chatbox/PlatformerChatBox.scss
@@ -44,6 +44,7 @@ platformerchatbox {
         cursor: pointer;
         opacity: 0;
         top: 46px;
+        z-index: 20;
     }
 
     .placeholder {
